<resources>

    <!-- Used for Labels in the ToolBar -->
    <string name="app_name">My News</string>
    <string name="notifications_name">Notifications</string>
    <string name="search_articles">Search Articles</string>

    <!-- Used for Menu in the ToolBar -->
    <string name="searchIcon">Search</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Used in ToolBar & NavigationDrawer for title -->
    <string name="homepage">HOMEPAGE</string>
    <string name="categoryNews">News by category</string>
    <string name="topStories">TOP STORIES</string>
    <string name="mostPopular">MOST POPULAR</string>
    <string name="foreign">FOREIGN</string>
    <string name="business">BUSINESS</string>
    <string name="magazine">MAGAZINE</string>
    <string name="tools">Tools</string>
    <string name="searchNavigation">SEARCH</string>
    <string name="notificationsNavigation">NOTIFICATIONS</string>

    <!-- Used for AlertDialog in Menu-->
    <string name="helpDialog">My News is a mobile application that allows you to consult
        New York Times news articles by topic.\nYou also have the opportunity to search for an
        article by keywords, themes, with a start date and an end date.\nFinally, you can
        receive daily notifications (at 7:30 p.m.) by setting keywords and themes.</string>
    <string name="aboutDialog">My News is the OpenClassrooms Project # 5 in the Android Application
        Developer Course.\nYou can consult the repository on Github at the following address :\n
        https://github.com/jeanpierreZ/MyNews.</string>
    <string name="cancel">@android:string/cancel</string>

    <!-- Used for the Fragment Search -->
    <string name="searchQueryTerm">Search query term</string>
    <string name="beginDate">Begin Date</string>
    <string name="endDate">End Date</string>
    <string name="searchButton">SEARCH</string>

    <!-- Used for the Fragment ResultQuery -->
    <string name="toastNoResult">There is no result for your request \"%1$s\" with the dates
        and categories chosen."</string>

    <!-- Used for the Fragment Notifications -->
    <string name="enableNotifications">Enable notifications (once per day)</string>
    <string name="activatedNotifications">Notifications are ACTIVATED.</string>
    <string name="canceledNotifications">Notifications are CANCELED.</string>

    <!-- Used for the NotificationReceiver -->
    <string name="zeroArticle">Today there isn\'t new article for your request.</string>
    <string name="oneArticle">Today there is %1$d new article for your request.</string>
    <string name="articles">Today there are %1$d new articles for your request.</string>

    <!-- Used for the Channel Notifications -->
    <string name="channel_name">"Channel</string>
    <string name="channel_description">Channel for notifications</string>

    <!-- Used for the Image (contentDescription) -->
    <string name="image">Image</string>

</resources>
