<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <item android:title="@string/categoryNews">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_topStories"
                    android:title="@string/topStories" />
                <item
                    android:id="@+id/activity_main_drawer_mostPopular"
                    android:title="@string/mostPopular" />
                <item
                    android:id="@+id/activity_main_drawer_foreign"
                    android:title="@string/foreign" />
                <item
                    android:id="@+id/activity_main_drawer_business"
                    android:title="@string/business" />
                <item
                    android:id="@+id/activity_main_drawer_magazine"
                    android:title="@string/magazine" />
            </group>
        </menu>
    </item>

    <item android:title="@string/tools">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_search"
                    android:title="@string/searchNavigation" />
                <item
                    android:id="@+id/activity_main_drawer_notifications"
                    android:title="@string/notificationsNavigation" />
            </group>
        </menu>
    </item>

</menu>